Add button "Quick Start Guide" for Mobile Apps

--- a/code/dev/less/common.less
+++ b/code/dev/less/common.less
@@ -26,7 +26,7 @@ button, input, select, textarea {
 
 }
 .btn {
-  &.btn-download.btn-success {
+  &.btn-download.btn-success, &.btn-vendor-guide.btn-success {
     background-color: @app-color-green;
     border-color: @app-color-green;
     &:hover {
