Update WAF Rules in Account Resourses Page

--- a/code/dev/less/waf-rules.less
+++ b/code/dev/less/waf-rules.less
@@ -5,6 +5,11 @@
     &__tabs  table tbody tr td {
         max-width: none;
     }
+    &-list__customer{
+      td.description{
+        max-width: none;
+      }
+    }
 }
 
 .waf-rule-body--view {
