Display column "Used By Domains"

--- a/code/dev/less/waf-rules.less
+++ b/code/dev/less/waf-rules.less
@@ -5,8 +5,9 @@
     &__tabs  table tbody tr td {
         max-width: none;
     }
-    &-list__customer{
+    &-list__customer, &-list__buiiltin{
       td.description{
+        min-width: 150px;
         max-width: none;
       }
     }
