--- a/code/dev/parts/waf_rules/view/waf-rules-list__customer.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__customer.tpl.html
@@ -26,8 +26,7 @@
           <th><a href="" ng-click="order('updated_by')">Updated By</a>
             <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span>
           </th>
-          <!--<th ng-if="auth.isRevadmin()"> <a href="" ng-click="order('domains')">Used By Domains</a>
-            <span class="sortorder" ng-show="filter.predicate === 'domains'" ng-class="{reverse: filter.reverse}"></span></th>-->
+          <th ng-if="auth.isRevadmin()">Used By Domains</th>
           <th class="thin">Status</th>
           <th>Actions</th>
           <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
@@ -41,14 +40,14 @@
           <td> <a href="" ui-sref="{{isReadOnly() ? '.':'.edit({id: item.id})'}}" ng-class="{'disabled':isReadOnly()}" ng-if="!item.loading"
               uib-tooltip="{{isReadOnly() ?'View WAF Rule':'Edit WAF Rule'}}">
              {{item.rule_name}}</a>
-             </td>
-          <td class="description"> {{item.comment}} </td>
+          </td>
+          <td class="description">&nbsp; {{item.comment}} </td>
           <td> {{getRelativeDate(item.updated_at) }}</td>
-          <td> {{item.updated_by}}</td>
-          <!--TODO: later
-                  <td>
-                    <div class="waf-rule-used-by">{{item.domains}}</div>
-                  </td>-->
+          <td>&nbsp;{{item.updated_by}}</td>
+          <td class="description">
+            <span class="waf-rule-used-by" ng-repeat="domain in item.domains">
+               <a ui-sref="index.webApp.domains.edit({id:domain.id})">{{domain.domain}} </a><span ng-if="!$last">,</span></span>&nbsp;
+          </td>
           <td>
             <div waf-rule-staging-status ng-id="item.id"></div>
           </td>
@@ -61,12 +60,10 @@
               uib-tooltip="Edit WAF Rule">
               <i class="glyphicon glyphicon-pencil"></i>
             </a>
-            <a href="" ng-if="!item.loading" ng-click="onDuplicateWAFRule($event,item)" ng-class="{'disabled':isReadOnly()}"
-              uib-tooltip="Duplicate WAF Rule">
+            <a href="" ng-if="!item.loading" ng-click="onDuplicateWAFRule($event,item)" ng-class="{'disabled':isReadOnly()}" uib-tooltip="Duplicate WAF Rule">
               <i class="fa fa-clone"></i>
             </a>
-            <a href="" ng-if="!item.loading" ng-click="deleteWAFRule(item)" ng-class="{'disabled':isReadOnly()}"
-              uib-tooltip="Delete WAF Rule">
+            <a href="" ng-if="!item.loading" ng-click="deleteWAFRule(item)" ng-class="{'disabled':isReadOnly()}" uib-tooltip="Delete WAF Rule">
               <i class="glyphicon glyphicon-trash"></i>
             </a>
           </td>
