--- a/code/dev/parts/waf_rules/view/waf-rules-list__customer.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__customer.tpl.html
@@ -41,9 +41,9 @@
               uib-tooltip="{{isReadOnly() ?'View WAF Rule':'Edit WAF Rule'}}">
              {{item.rule_name}}</a>
           </td>
-          <td class="description">&nbsp; {{item.comment}} </td>
+          <td class="description">{{item.comment}} &nbsp;</td>
           <td> {{getRelativeDate(item.updated_at) }}</td>
-          <td>&nbsp;{{item.updated_by}}</td>
+          <td>{{item.updated_by}}&nbsp;</td>
           <td class="description">
             <span class="waf-rule-used-by" ng-repeat="domain in item.domains">
                <a ui-sref="index.webApp.domains.edit({id:domain.id})">{{domain.domain}} </a><span ng-if="!$last">,</span></span>&nbsp;
