Change back for Top Objects Reports

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -62,10 +62,10 @@ table {
     }
   }
 }
-
-.description-link{
-    white-space: normal;
-    word-break: break-word;
-    max-height: 50px;
-    display: block;
-}
+// NOTE: scroll content
+// .description-link{
+//     white-space: normal;
+//     word-break: break-word;
+//     max-height: 50px;
+//     display: block;
+// }
