--- a/code/dev/parts/waf_rules/view/waf-rules-list__builtin.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__builtin.tpl.html
@@ -50,7 +50,7 @@
           <td>{{item.updated_by}}</td>
           <td class="description">
             <span class="waf-rule-used-by" ng-repeat="domain in item.domains">
-               <a ui-sref="index.webApp.domains.edit({id:domain.id})">{{domain.domain}}</a><span ng-if="!$last">,</span></span>&nbsp;
+               <a ui-sref="index.webApp.domains.edit({id:domain.id})">{{domain.domain_name}}</a><span ng-if="!$last">,</span></span>&nbsp;
           </td>
           <td>
             <div waf-rule-staging-status ng-id="item.id"></div>
