Add new directives for WAF Analytics

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -36,6 +36,7 @@
 @import "dns_analytics";
 @import "loader";
 @import "waf-rules";
+@import "waf-analytics";
 
 // NOTE: global class
 .block-center {
