Add style for .graph-title

--- a/code/dev/less/waf-analytics.less
+++ b/code/dev/less/waf-analytics.less
@@ -1,5 +1,8 @@
 .waf-analytics {
-    // Tabs on Top Object Attacks
+    & .graph-title {
+        height: 2em;
+    }
+    /* Tabs on Top Object Attacks*/
     #topAttacksTabs {
         & .tab-pane {
             margin: 20px 0px;
