Update WAF Heatmap - hide button

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -37,6 +37,7 @@
 @import "loader";
 @import "waf-rules";
 @import "waf-analytics";
+@import "waf-heatmap";
 
 // NOTE: global class
 .block-center {
