--- a/code/dev/less/azure-sso.less
+++ b/code/dev/less/azure-sso.less
@@ -9,6 +9,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
     min-height: 100%;
+    min-width: 100%;
     .panel-footer {
       background-color: #fff;
       margin-top: 20px;
