--- a/code/dev/less/signup.less
+++ b/code/dev/less/signup.less
@@ -96,8 +96,31 @@ form.new-user-form {
         }
     }
 }
-.signup-container{
-  ol.list-instruction, ul.list-information, p.information {
-      text-align: justify;
-  }
+
+.signup-container {
+    ol.list-instruction,
+    ul.list-information,
+    p.information {
+        text-align: justify;
+    }
+}
+
+input[name="promoCode"] {
+    text-transform: uppercase;
+    &::-webkit-input-placeholder {
+        /* WebKit browsers */
+        text-transform: none;
+    }
+    &:-moz-placeholder {
+        /* Mozilla Firefox 4 to 18 */
+        text-transform: none;
+    }
+    &::-moz-placeholder {
+        /* Mozilla Firefox 19+ */
+        text-transform: none;
+    }
+    &:-ms-input-placeholder {
+        /* Internet Explorer 10+ */
+        text-transform: none;
+    }
 }
