Add new widget 'Security Events Graph'

--- a/code/dev/less/widget.less
+++ b/code/dev/less/widget.less
@@ -4,7 +4,7 @@
   .filter-hours-periods {
     display: none;
   }
-  .reports_charts_title {
+  .reports_charts_title, .waf_charts_title {
     display: none;
   }
 }
