Update Auto-Discover Zone Records for DNS

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -482,7 +482,9 @@ form,
     }
   }
 }
-
+.modal-dialog .modal-dialog--max-size{
+  min-width: 90vw;
+}
 // headers on ssl_names modal windows
 .modal-header {
   &--error {
