--- a/code/dev/parts/waf_rules/view/waf-rules-list__builtin.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__builtin.tpl.html
@@ -5,9 +5,9 @@
   <div class="alert alert-warning" ng-if="records == null && !_loading">
     Failed to retrieve a list of resources - please try again later
   </div>
-  <!-- <div class="alert alert-info" ng-if="_loading">
-    <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-  </div> -->
+  <div class="alert alert-info" ng-if="_loading && filteredRecords.length === 0">
+    <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading...
+  </div>
   <crud-pagination></crud-pagination>
   <div class="table-responsive">
     <table class="table">
