--- a/code/dev/parts/waf_rules/view/waf-rules-list__customer.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__customer.tpl.html
@@ -1,6 +1,6 @@
 <div class="waf-rules-list__customer">
   <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-    There are no any customer WAF rules configured in the system
+    There are no customer WAF rules configured in the system
   </div>
   <div class="alert alert-warning" ng-if="records == null && !_loading">
     Failed to retrieve a list of resources - please try again later
