Add smoke tests for CDN IP Blocks Page

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -38,6 +38,7 @@
 @import "waf-rules";
 @import "waf-analytics";
 @import "waf-heatmap";
+@import "cdn-ip-blocks";
 
 // NOTE: global class
 .block-center {
