Margins and paddings fixed

--- a/code/dev/less/navbar.less
+++ b/code/dev/less/navbar.less
@@ -42,8 +42,8 @@
         //height: @app-top-menu-height;
       }
 
-      .user-info {
-
+      .user-info.top-strip {
+        margin-top: 10px; // fix for user info spacing
         a.dropdown-toggle, a.full {
           //padding-top: 10px;
           //height: @app-top-menu-height;
