Fixed Mobile Apps section buttons in small viewport

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -584,3 +584,9 @@ form,
 .spaced-button{
   margin-left: 30px;
 }
+
+@media (max-width: 1145px){
+  .fix-btns button, .fix-btns a{
+    margin-bottom: 5px !important;
+  }
+}
