Dashboard action buttons aligned

--- a/code/dev/less/dashboards.less
+++ b/code/dev/less/dashboards.less
@@ -131,3 +131,8 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title {
     padding-left: 20px;
   }
 }
+
+.dashboard-actions{
+  position: relative;
+  top: -2px;
+}
