Update Sign Up Page

--- a/code/dev/less/signup.less
+++ b/code/dev/less/signup.less
@@ -59,8 +59,7 @@ form {
 
 form.new-user-form {
   .form-group {
-    margin: 10px;
-    //h4 {
+    margin: 10px; //h4 {
     //  color: #FF8A00;
     //  font-style: italic;
     //}
@@ -102,6 +101,11 @@ form.new-user-form {
 }
 
 .signup-container {
+  &.container{
+    background-color: #fff;
+    margin: auto;
+    min-height: 100%;
+  }
   ol.list-instruction,
   ul.list-information,
   p.information {
