--- a/code/dev/less/dns-zones.less
+++ b/code/dev/less/dns-zones.less
@@ -44,6 +44,13 @@ form.dns-zone-records--new-form {
   vertical-align: top;
 }
 
+.beta-functional{
+  color: #f4006f;
+  font-size: 0.9em;
+  vertical-align: top;
+  font-weight: bold;
+}
+
 .modal-body {
   & .dns-zone-record-answer {
     & .form-control {
