Update “Beta” shield

--- a/code/dev/less/dns-zones.less
+++ b/code/dev/less/dns-zones.less
@@ -44,11 +44,12 @@ form.dns-zone-records--new-form {
   vertical-align: top;
 }
 
-.beta-functional{
-  color: #f4006f;
+.beta-functional {
   font-size: 0.9em;
   vertical-align: top;
   font-weight: bold;
+  top: -0.4em;
+  position: relative;
 }
 
 .modal-body {
