fixed element 'ui-select-multiple'

--- a/code/dev/less/elements/panel.less
+++ b/code/dev/less/elements/panel.less
@@ -28,3 +28,13 @@
 .protocolbox input[type="checkbox"] {
 	margin-left: 0px;
 }
+
+.ui-select-multiple {
+  .ui-select-match-item {
+    max-width: 100%;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    float: left;
+  }
+}
