Update positions the 'Beta' label

--- a/code/dev/less/dns-zones.less
+++ b/code/dev/less/dns-zones.less
@@ -52,6 +52,10 @@ form.dns-zone-records--new-form {
   position: relative;
 }
 
+h2 i.beta-functional {
+  font-size: 14px;
+}
+
 .modal-body {
   & .dns-zone-record-answer {
     & .form-control {
