Add Edge Cache Page and updates

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -39,6 +39,7 @@
 @import "waf-analytics";
 @import "waf-heatmap";
 @import "cdn-ip-blocks";
+@import "edge-cache";
 
 // NOTE: global class
 .block-center {
