--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -606,6 +606,7 @@ form,
   -moz-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.3);
   box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.3);
 }
+.ip-tooltip-holder.hover > .ipinfo, // for tests
 .ip-tooltip-holder:hover > .ipinfo{
   display: block;
 }
