waf ip tooltip fix

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -595,7 +595,8 @@ form,
 .ipinfo{
   transition: 222ms all;
   position: absolute;
-  top: -40px;
+  top: -90px;
+  left: -75px;
   border: 1px solid #333;
   border-radius: 5px;
   background: #fff;
@@ -610,8 +611,13 @@ form,
 .ip-tooltip-holder:hover > .ipinfo{
   display: block;
 }
+.ip-tooltip-holder{
+  position: absolute;
+  margin-left: 5px;
+}
 .pos-absolute{
   position: absolute;
+  margin-left: 0;
 }
 
 .pos-absolute .ipinfo{
