Update Custom VCL Rules Tab - add property  "_isEditLocked"

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -386,6 +386,7 @@ form,
     opacity: 1;
     line-height: 0%;
     transition: 0.4s linear all;
+    clear: both;
   }
   &.ng-invalid {
     &.ng-submitted {
