--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -348,7 +348,9 @@ input[type="checkbox"] {
 textarea {
   &.form-control {
     // font-family: Courier;
-    max-width: 550px;
+    min-width: 550px;
+    width: 550px;
+    max-width: 95%;
   }
   &.text--courier {
     min-height: 30vh;
