Update and fix for use _EditLocked

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -45,6 +45,7 @@
 .block-center {
   text-align: center;
 }
+
 .inline-block {
   display: inline-block;
 }
@@ -66,6 +67,11 @@ table {
     }
   }
 }
+
+a.btn.disabled {
+   cursor: not-allowed;
+}
+
 // NOTE: scroll content
 // .description-link{
 //     white-space: normal;
