Add tooltip with icon for Proxy Traffic graphs

--- a/code/dev/less/widget.less
+++ b/code/dev/less/widget.less
@@ -9,6 +9,9 @@
   .title-chart {
     display: none;
   }
+  .graph-help-icon {
+    display: none;
+  }
 }
 
 // change  columns width for modal window "Add new widget"
