Update popover for First Byte Time Reports Page and style

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -627,3 +627,12 @@ form,
   top: -50px;
   left: -50%;
 }
+.graph-title{
+  margin-top: 0px;
+}
+
+.graph-help-icon{
+  position: absolute;
+  padding: 0 3px;
+}
+
