--- a/code/dev/less/widget.less
+++ b/code/dev/less/widget.less
@@ -6,7 +6,7 @@
   }
   .reports_charts_title,
   .waf_charts_title,
-  .title-chart {
+  .graph-title{
     display: none;
   }
   .graph-help-icon {
