App popover on WAF Events Page

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -33,6 +33,10 @@ body {
 
 .page-title {
   margin-bottom: 24px;
+    &-help-icon {
+    position: absolute;
+    padding: 20px 3px;
+  }
 }
 
 .left-panel {
