Hide all “Beta” labels in the portal UI

--- a/code/dev/less/dns-zones.less
+++ b/code/dev/less/dns-zones.less
@@ -55,7 +55,11 @@ form.dns-zone-records--new-form {
 h2 i.beta-functional {
   font-size: 14px;
 }
-
+// NOTE: the temporary css style for hide all labels "Beta"
+// TODO: delete this css for show all labels "Beta"
+.beta-functional{
+  display: none;
+}
 .modal-body {
   & .dns-zone-record-answer {
     & .form-control {
