Updated groups UI templates

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -40,6 +40,7 @@
 @import "waf-heatmap";
 @import "cdn-ip-blocks";
 @import "edge-cache";
+@import "groups";
 
 // NOTE: global class
 .block-center {
