Added group inherited permissions for apikeys and users

--- a/code/dev/less/groups.less
+++ b/code/dev/less/groups.less
@@ -77,3 +77,9 @@
 .permissions .col-sm-6 {
     padding: 0;
 }
+
+permissions {
+    .ui-select-multiple.ui-select-bootstrap {
+        height: 34px;
+    }
+}
