--- a/code/dev/less/groups.less
+++ b/code/dev/less/groups.less
@@ -3,6 +3,7 @@
 .checkbox-list{
 
     margin: 15px 0;
+    
 
     .ui-select-multiple.ui-select-bootstrap, input.ui-select-search {
         width: 95%;
@@ -17,6 +18,7 @@
         display: inline-block;
         background: @darkbg;
         border-top-left-radius: 0;
+        width: 100%;
         border-radius: 5px;
 
         .items {
