Portal UI fixes, invitation workflow fixes

--- a/code/dev/less/common.less
+++ b/code/dev/less/common.less
@@ -51,7 +51,10 @@ button, input, select, textarea {
   }
 }
 
-
+.btn.btn-disabled {
+  cursor: not-allowed ;
+  color: #fff;
+}
 .btn.btn-warning:hover ,.btn.btn-warning:focus {
   border-color: #FF8A00;
 }
