--- a/code/dev/parts/waf_rules/view/waf-rules-list__customer.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__customer.tpl.html
@@ -20,7 +20,7 @@
           <th><a href="" ng-click="order('comment')">Rule Description</a>
             <span class="sortorder" ng-show="filter.predicate === 'comment'" ng-class="{reverse: filter.reverse}"></span>
           </th>
-          <th><a href="" ng-click="order('updated_at')">Updated At</a>
+          <th><a href="" ng-click="order('updated_at')">Last Update</a>
             <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
           </th>
           <th><a href="" ng-click="order('updated_by')">Updated By</a>
