--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -35,6 +35,8 @@ section[drawer] {
   .panel-menu{
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    overflow-y: auto;
   }
   .side-menu {
     // position: absolute;
@@ -42,7 +44,6 @@ section[drawer] {
     // height: 100%;
     padding-left: 12px;
     list-style-type: none;
-    overflow-y: auto;
     .side-menu-item {
       cursor: pointer;
       display: block;
@@ -109,16 +110,16 @@ section[drawer] {
   }
 }
 
-.side-menu::-webkit-scrollbar {
+.panel-menu::-webkit-scrollbar {
   width: 6px;
 }
 
-.side-menu::-webkit-scrollbar-track {
+.panel-menu::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px #fff;
   border-radius: 6px;
 }
 
-.side-menu::-webkit-scrollbar-thumb {
+.panel-menu::-webkit-scrollbar-thumb {
   -webkit-box-shadow: inset 8px 6px #f7941e;
   border-radius: 6px;
 }
