Fixed firefox billing zones modal scroll

--- a/code/dev/less/usage-web.less
+++ b/code/dev/less/usage-web.less
@@ -1,7 +1,7 @@
 // NOTE: styly for Usage Report Page
 .container-billing-zones-details {
     max-height: 50vh;
-    overflow-y: overlay;
+    overflow-y: auto;
 }
 
 .usage-report{
