Usage report accounts usage filtering fixed

--- a/code/dev/less/usage-web.less
+++ b/code/dev/less/usage-web.less
@@ -12,3 +12,11 @@
       border-radius: 0px;
     }
 }
+
+// helper classes to append GB to usage report numbers to fix filter by number
+.GBappend:after {
+    content: ' GB';
+}
+.Mbpsappend:after {
+    content: ' Mbps';
+}
