--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -41,6 +41,7 @@
 @import "cdn-ip-blocks";
 @import "edge-cache";
 @import "groups";
+@import "traffic-alerts";
 
 // NOTE: global class
 .block-center {
