--- a/code/dev/less/groups.less
+++ b/code/dev/less/groups.less
@@ -66,6 +66,10 @@
   padding: 0;
 }
 
-.group-users-list {
-  float: right;
+.group-users-list,
+.group-users-list>a,
+.group_item,
+.group_item>span,
+.group_item>a {
+  float: left;
 }
